# DarkitectPublic

./: .gitignore  .gitmodules  CMakeLists.txt  Darkitect.sql  README.md
Extra/CDClientGen/: CacheGen.py  StructGen.py
Extra/Documentation/: Components.md  Havok.md
Extra/GameMessageGen/: ClientGameMessageGen.py  GMHandlerGen.py  GameMessageJSONDump.py  ServerGameMessageGen.py
Extra/Migrations/: 01.sql  MigrationRunner.py
Internal/: CMakeLists.txt
Internal/Common/: CMakeLists.txt  Global.h  INIReader.h  SHA512.cpp  SHA512.h  Strings.cpp  Strings.h  Utils.h
Internal/Common/Enums/: SessionType.h
Internal/Common/Structs/: Account.h  Character.h  LNV.cpp  LNV.h  Mission.h  NiPoint3.h  NiQuaternion.h  Position.h
Internal/Common/Structs/ServerParts/: CDClient.cpp  CDClient.h  Config.h  Database.h  Logger.h
Internal/Common/Structs/ServerParts/CDClient/: CDClientStructs.h
Internal/Common/Structs/Servers/: GameServer.h  MasterServer.h
Internal/Files/: CMakeLists.txt
Internal/Files/HKX/: HKX.cpp  HKX.h
Internal/Files/HKX/Sections/: GlobalHeader.h  Sections.h
Internal/Files/LUZ/: LUZFile.cpp  LUZFile.h  PathType.h
Internal/Files/LUZ/Scene/: LUZScene.cpp  LUZScene.h  Objects.h
Internal/Game/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  ReplicaManager.h
Internal/Game/Components/: BaseCombatAIComponent.h  BouncerComponent.h  CharacterComponent.h  Component107.h  ControllablePhysicsComponent.h  DestroyableComponent.h  InventoryComponent.h  MissionOfferComponent.h  PhantomPhysicsComponent.h  QuickbuildComponent.h  RenderComponent.h  ScriptComponent.h  ScriptedActivityComponent.h  SimplePhysicsComponent.h  SkillComponent.h  SpawnerComponent.h  StatsComponent.h  VendorComponent.h
Internal/Game/Systems/Characters/: CharacterXML.h
Internal/Game/Systems/Missions/: Requirements.h
Internal/Game/Systems/Scripts/: CppScript.cpp  CppScript.h
Internal/Net/: AuthPackets.cpp  AuthPackets.h  CMakeLists.txt  CharPackets.cpp  CharPackets.h  ChatPackets.cpp  ChatPackets.h  GeneralPackets.cpp  GeneralPackets.h  PacketHeader.h  WorldPackets.cpp  WorldPackets.h
Internal/Net/Enums/: EComponents.h  ELoginReturnCode.h  EPackets.h  ERemoteConnection.h  EServerType.h
Internal/Net/GameMessages/: ClientGMs.cpp  ClientGMs.h  GMHandler.h  GMs.h  ServerGMs.cpp  ServerGMs.h
Servers/GameServer/: Main.cpp
Servers/MasterServer/: Main.cpp
Servers/TestingExecutable/: Main.cpp
