add_library(Common STATIC 
		"Structs/Account.h"
		Structs/ServerParts/CDClient.h
		Structs/Character.h
		Structs/ServerParts/Config.h
		Structs/ServerParts/Database.h
		Structs/Servers/GameServer.h
		Global.h
		INIReader.h
		Structs/LNV.cpp
		Structs/LNV.h
		Structs/ServerParts/Logger.h
		Structs/Servers/MasterServer.h
		Structs/NiPoint3.h
		Structs/NiQuaternion.h
		Structs/Position.h
		Enums/SessionType.h
		SHA512.cpp
		SHA512.h
		Strings.cpp
		Strings.h
		Utils.h
		"Structs/Mission.h"
		"Structs/ServerParts/CDClient/CDClientStructs.h"
		 "Structs/ServerParts/CDClient.cpp")