add_library(Game STATIC "Components/CharacterComponent.h"
		Component.cpp
		Component.h
		Components/Component107.h
		Components/ControllablePhysicsComponent.h
		Components/DestroyableComponent.h
		Entity.cpp
		Entity.h
		Components/InventoryComponent.h
		Components/RenderComponent.h
		ReplicaManager.h
		Components/SkillComponent.h
		Components/SpawnerComponent.h
		Components/StatsComponent.h
		 "Components/BouncerComponent.h" "Components/ScriptComponent.h"  "Components/PhantomPhysicsComponent.h" "Components/MissionOfferComponent.h" "Systems/Missions/Requirements.h" "Systems/Characters/CharacterXML.h" "Components/BaseCombatAIComponent.h" "Components/ScriptedActivityComponent.h" "Components/QuickbuildComponent.h" "Systems/Scripts/CppScript.h" "Systems/Scripts/CppScript.cpp")